test/checker/fail/check_await_outside_async.ms
val bar := async proc () { 42 };

val foo := proc () { await bar() };
